feat: Upgrade java version and spring boot framework